deploy/resources/generation/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-deployment-data/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-deploymentData
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-deployment-data
    sas.com/admin: namespace
  name: sas-deployment-data
spec:
  host: $(INGRESS_HOST)
  path: /deploymentData
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-deployment-data
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-deploymentData
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-deployment-data
    sas.com/admin: namespace
  name: sas-deployment-data-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /deploymentData
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-deployment-data
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-licenses
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-licenses
    sas.com/admin: namespace
  name: sas-licenses
spec:
  host: $(INGRESS_HOST)
  path: /licenses
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-licenses
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-licenses
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-licenses
    sas.com/admin: namespace
  name: sas-licenses-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /licenses
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-licenses
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-metering
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-metering
    sas.com/admin: namespace
  name: sas-metering
spec:
  host: $(INGRESS_HOST)
  path: /metering
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-metering
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-metering
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-metering
    sas.com/admin: namespace
  name: sas-metering-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /metering
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-metering
  wildcardPolicy: Subdomain
